<resources>
    <string name="app_name">BusTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="today001">本日は</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">曜日</string>
    <string name="desu">です。</string>
    <string name="time">時</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="rere">時刻更新</string>
    <string name="now">現在</string>
    <string name="busMenu">バス　時刻表</string>
    <string name="gotoKOUSEN">徳山駅　→　徳山高専</string>
    <string name="gotoTOKUYAMAstation">徳山高専　→　徳山駅</string>
    <string name="add001">大学高専下も含めますか？</string>
    <string name="title_list001">バス時刻表</string>
    <string name="title_goto_kousen_01">高専行き</string>
    <string name="title_goto_tokuyamaeki_01">徳山駅行き</string>
    <string name="nextBus">次のバスは</string>
    <string name="busNameSearch">バス停の名前から検索</string>
    <string name="favorite">お気に入り</string>
    <string name="KousenSeimon">高専正門(大学高専下</string>
    <string name="K">か行</string>
    <string name="A">あ行</string>
    <string name="S">さ行</string>
    <string name="T">た行</string>
    <string name="TokuyamaEki">徳山駅</string>
    <string name="menu">menu</string>
    <string name="next">次へ</string>
    <string name="back">戻す</string>
    <string name="change">切り替え</string>
    <string name="last">終点駅指定</string>
    <string name="lister">時刻表一覧</string>
    <string name="Bouchou">防長バス </string>
    <string name="BusName">バス会社</string>
    <string name="KousenMae">高専正門</string>
    <string name="N">な行 </string>
    <string name="H">は行 </string>
    <string name="M">ま行 </string>
    <string name="Y">や行 </string>
    <string name="R">ら行 </string>
    <string name="W">わ行 </string>
    <string name="data">データー管理</string>
</resources>
