<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1.0"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today001" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:background="#F0FFF0"
            android:gravity="center_horizontal">

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/txtMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip" android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month" />
            <TextView android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/txtDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="0" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="40.0dip" android:id="@+id/txtWeek" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="a" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="50.0dip"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#EFFBF2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/txthour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="40.0dip"
                android:id="@+id/txtmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="40.0dip" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/min" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="40.0dip" android:id="@+id/txtsec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="40.0dip" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sec" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="更新確認中"
                android:id="@+id/txLoading"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.12"
                android:layout_marginBottom="5dp"
                android:background="#E0FFFF"
                android:textColor="#2E8B57" />

            <Button
                android:textSize="25.0dip" android:id="@+id/rere"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rere"
                android:layout_weight="0.12" />

            <Button
                android:textSize="30.0dip"
                android:id="@+id/btnBus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/busMenu"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="データ更新確認"
                android:id="@+id/dataCheck"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>